@@ -1,0 +1,2 @@
+bin_PROGRAMS = spdsend
+spdsend_SOURCES = spdsend.h spdsend.c server.c client.c common.c 
